# advent-of-code

./: .gitignore  1.hs  12.hs  13.hs  14.hs  15.hs  19.hs  2.hs  20.hs  21.hs  22.hs  23.hs  3.hs  4.hs  5.hs  6b-2.hs  7-2.hs  7.hs  8.hs  README.md  advent-of-code.cabal  check  run  scratch.hs  stack.yaml  test
2015/: 06.hs  07.hs  09.hs  10.hs  11.hs  16.hs  17.hs  18.hs  19-2.hs  19-3-caching-botched.hs  19-3-recursive-brute.hs  19-3.hs  19-4.hs  19-5.hs  19-6.hs  19-easy.hs  19.hs  24.hs  25.hs  6b-2.hs  6b.hs  cyk.hs  memo.hs  test.hs
2016/: 01.hs  04.hs  05.hs  08.hs  10.hs  11.hs  12.hs  13.hs  14.hs  15.hs  16.hs  17.hs  18.hs  19.hs  2-mess.hs  2.hs  20.hs  21.hs  22.hs  23.hs  24.hs  25.hs  3.hs  6.hs  7.hs  9.hs  test.hs
2017/: 02.hs  03.hs  04.hs  06.hs  08.hs  1.hs  10.hs  11.hs  12.hs  13.hs  14.hs  15.hs  16.hs  17.hs  18.hs  19.hs  20.hs  21.hs  22.hs  23.hs  24.hs  25.hs  3.hs  5.hs  7.hs  9.hs
2018/: 01.hs  02.hs  03.hs  04.hs  05.hs  06.hs  07.hs  08.hs  09.hs  template.hs
lib/: Advent.hs
lib/Advent/: Arrow.hs  Bounded.hs  Coord.hs  Debug.hs  Direction.hs  Distance.hs  Either.hs  Function.hs  Grid.hs  Hash.hs  List.hs  Map.hs  Numeric.hs  Parser.hs  Prelude.hs  Problem.hs  Ring.hs  Search.hs  State.hs  String.hs
