name:                advent-of-code
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/advent-of-code#readme
license:             BSD3
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  hs-source-dirs:      lib
  exposed-modules:     Advent
                     , Advent.Bounded
                     , Advent.Coord
                     , Advent.Direction
                     , Advent.Distance
                     , Advent.Either
                     , Advent.Function
                     , Advent.Grid
                     , Advent.Hash
                     , Advent.List
                     , Advent.Map
                     , Advent.Parser
                     , Advent.Prelude
                     , Advent.Search
                     , Advent.State
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , array
                     , attoparsec
                     , bimap
                     , bytestring
                     , containers
                     , cryptohash
                     , cryptonite
                     , dlist
                     , matrix
                     , megaparsec
                     , mtl
                     , pipes
                     , pqueue
                     , random-shuffle
                     , scientific
                     , split
                     , text
                     , unordered-containers
                     , vector
                     , word8
